Adding Sturucture of backend

--- a/Backend/config.env
+++ b/Backend/config.env
@@ -1,2 +1,4 @@
-PORT = 5000
+
 NODE_ENV = develpment
+DATABASE = mongodb+srv://Mohamed:<db_password>@burgerrebublic.rz5y4.mongodb.net/Menue?retryWrites=true&w=majority&appName=BurgerRebublic
+DATABASE_PASSWORD = Mohamed061199
